--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -161,6 +161,9 @@
     main .timeline .experiences .details .title p, main .timeline .education .details .title p{
         font-size: 0.7em;
     }
+	main .projects {
+	padding: 0 50px;
+	}
     main .projects h1{
         font-size: 1.2em;
     }
